# harmonic-compression

./: .gitignore  imgui.ini  main.py  pyproject.toml
compression/: compression.py  math.py  visualization.py
data/: cube.e57
prototyping/: compression.py
src/: compression.py  math_utils.py  sandbox.py  visualization.py
utility/: e57.py
visualizer/: __init__.py  visualizer.py
