[project]
name = "harmonic-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e57>=0.2.1a1",
    "glfw>=2.8.0",
    "imgui>=2.0.0",
    "numba>=0.61.0",
    "numba-scipy>=0.2.0",
    "opencv-python>=4.11.0.86",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "scipy>=1.15.2",
]
